# roboptim-core-plugin-ipopt

./: .gitignore  .gitmodules  .travis.build.sh  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README.md  appveyor.yml  configure.ac  ipopt  ipopt.mk  roboptim-core-ipopt-plugin.spec.in
build-aux/: init.mk  ipopt.m4
debian/: changelog  control  copyright  libroboptim-core-plugin-ipopt-dev.install  libroboptim-core-plugin-ipopt-doc.doc-base  libroboptim-core-plugin-ipopt-doc.lintian-overrides  rules  watch
doc/: sf-upload.sh.in
doxygen/HEAD/: a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00006.html  a00006.js  a00007.html  a00008.html  a00009.html  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00013.html  a00013.js  a00014.html  a00015.html  a00015.js  a00016.html  a00017.html  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00021.js  a00023.html  a00023.js  a00025.html  a00026.html  a00027.html  a00027.js  (+43 more)
doxygen/HEAD/search/: all_1.js  all_12.js  all_13.js  all_3a.html  all_63.js  all_64.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_73.js  classes_0.js  classes_69.js  classes_73.js  classes_74.js  defines_1.js  defines_6d.js  defines_73.js  enums_0.js  enumvalues_6e.js  files_0.js  files_2.js  functions_0.js  functions_4.js  functions_5.js  functions_64.js  functions_6a.js  functions_73.js  functions_74.js  functions_7e.js  functions_9.js  groups_0.js  groups_1.js  namespaces_69.js  related_0.js  related_3a.html  search.js  typedefs_0.js  typedefs_1.js  typedefs_66.js  (+7 more)
doxygen/v2.0/: a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00004.html  a00005.html  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00009.html  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00014.html  a00014.js  a00015.html  a00016.html  a00016.js  a00017.html  a00018.html  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00022.html  a00022.js  a00024.html  a00024.js  a00026.html  a00027.html  a00028.html  a00028.js  (+111 more)
doxygen/v2.0/search/: all_63.js  all_64.js  all_66.js  all_67.js  all_69.js  all_6b.js  all_6d.js  all_6e.js  all_6f.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_69.js  classes_75.js  defines_64.js  defines_66.js  defines_6d.js  defines_73.js  enumvalues_6c.js  files_64.js  files_69.js  files_74.js  functions_63.js  functions_64.js  functions_65.js  functions_69.js  functions_6a.js  functions_6f.js  functions_73.js  functions_75.js  functions_7e.js  groups_6d.js  groups_6f.js  namespaces_69.js  namespaces_72.js  search.js  typedefs_63.js  typedefs_69.js  typedefs_6e.js  (+2 more)
doxygen/v3.0/: a00002.js  a00006.html  a00007.html  a00009.js  a00014.html  a00019.html  a00019.js  a00021.html  a00021.js  a00026.html  a00028.html  a00030.html  a00033.html  annotated.html  functions_type.html  globals_defs.html  hierarchy.html  hierarchy.js  index.html  namespacemembers.html
doxygen/v3.0/search/: all_3a.js  all_66.js  all_69.js  all_72.js  classes_69.js  defines_73.js  files_69.js  functions_66.js  functions_69.js  typedefs_69.js
doxygen/v3.1/: a00001.html  a00002.html  a00004.js  a00006.html  a00006.js  a00008.html  a00009.html  a00010.html  a00013.html  a00013.js  a00015.html  a00017.html  a00018.html  a00019.html  a00020.html  a00025.html  a00029.html  a00031.html  a00032.html  a00034.html  functions.html  functions_enum.html  functions_eval.html  functions_type.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  modules.html
doxygen/v3.1/search/: all_63.js  all_64.js  all_67.js  all_69.js  all_6c.js  all_6e.js  all_73.js  all_74.js  defines_69.js  functions_63.js  typedefs_69.js  typedefs_73.js
doxygen/v3.2/: a00001.html  a00002.html  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00006.html  a00006.js  a00007.html  a00008.html  a00009.html  a00009.js  a00010.html  a00011.html  a00012.html  a00013.html  a00013.js  a00014.html  a00015.html  a00015.js  a00016.html  a00017.html  a00018.html  a00019.html  a00019.js  a00020.html  a00021.html  a00023.html  a00023.js  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  (+23 more)
doxygen/v3.2/search/: all_66.js  all_69.js  all_73.js  defines_64.js  functions_64.js  functions_66.js  functions_73.js  search.js
include/: Makefile.am
include/roboptim/core/plugin/: ipopt-common.hh  ipopt-sparse.hh  ipopt-td.hh  ipopt.hh
include/roboptim/core/plugin/ipopt/: ipopt-common.hh  ipopt-parameters-updater.hh  ipopt-sparse.hh  ipopt-td.hh  ipopt.hh
msvc/INSTALL/: INSTALL.vcproj
msvc/roboptim-core-plugin-ipopt/: config.h  roboptim-core-ipopt-plugin.sln  roboptim-core-ipopt-plugin.vcproj  roboptim-core-ipopt-plugin.vsprops  roboptim-core-plugin-ipopt.sln  roboptim-core-plugin-ipopt.vcproj  roboptim-core-plugin-ipopt.vspros
msvc/simple/: simple.vcproj
msvc/simplewithdll/: simplewithdll.vcproj
src/: CMakeLists.txt  Makefile.am  doc.hh  ipopt-common.hxx  ipopt-sparse.cc  ipopt-td.cc  ipopt.cc  roboptim-core-ipopt-plugin.cc  roboptim-core-ipopt-td-plugin.cc  tnlp.cc  tnlp.hh  tnlp.hxx
tests/: CMakeLists.txt  Makefile.am  atlocal.in  hs071.hh  plugin.cc  plugin.stdout  plugin2.cc  plugin2.stdout  plugin3.cc  plugin3.stdout  simple.cc  simple.stdout  testsuite.at
